// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshots matches default variant 1`] = `
<DocumentFragment>
  <div
    class="aje-dropdown is-medium has-error"
  >
    <div
      class="aje-combobox"
    >
      <label
        class="aje-label"
        for="Combobox-:r0:-input"
      >
        Text Label
      </label>
      <p
        class="aje-label--message"
      >
        message
      </p>
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="Combobox-:r0:-listbox"
        class="aje-combobox__input is-searchable"
        id="Combobox-:r0:-combo"
        role="combobox"
      >
        <input
          aria-autocomplete="both"
          aria-controls="Combobox-:r0:-listbox"
          aria-describedby="Combobox-:r0:-error"
          aria-labelledby="Combobox-:r0:-label"
          id="Combobox-:r0:-input"
          type="text"
          value="content"
        />
      </div>
      <div
        class="aje-popover is-full aje-popover-bottom-left"
      >
        <ul
          aria-labelledby="Combobox-:r0:-label"
          class="aje-combobox__menu"
          id="Combobox-:r0:-listbox"
          role="listbox"
        />
      </div>
    </div>
    <p
      class="aje-label--error"
      id="Combobox-:r0:-error"
    >
      some error
    </p>
  </div>
</DocumentFragment>
`;

exports[`matches snapshots matches floating variant 1`] = `
<DocumentFragment>
  <div
    class="aje-dropdown--floating is-medium has-error"
  >
    <div
      class="aje-combobox"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="Combobox-:r1:-listbox"
        class="aje-combobox__input is-searchable"
        id="Combobox-:r1:-combo"
        role="combobox"
      >
        <input
          aria-autocomplete="both"
          aria-controls="Combobox-:r1:-listbox"
          aria-describedby="Combobox-:r1:-error"
          aria-labelledby="Combobox-:r1:-label"
          id="Combobox-:r1:-input"
          type="text"
          value="content"
        />
      </div>
      <div
        class="aje-popover is-full aje-popover-bottom-left"
      >
        <ul
          aria-labelledby="Combobox-:r1:-label"
          class="aje-combobox__menu"
          id="Combobox-:r1:-listbox"
          role="listbox"
        />
      </div>
      <label
        class=""
        for="Combobox-:r1:-input"
      >
        Text Label
      </label>
    </div>
    <p
      class="aje-label--message"
    >
      message
    </p>
    <p
      class="aje-label--error"
      id="Combobox-:r1:-error"
    >
      some error
    </p>
  </div>
</DocumentFragment>
`;
